@@ -1,17 +1,17 @@
 package com.example.proyecto2025_BE.service;
 
 
+import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import com.example.proyecto2025_BE.utils.ranking.UserRankingProjection;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -81,37 +81,38 @@ public class UserService {
 	}
 
 	public Page<UserRankingDTO> getUsersOrderedByScoreDesc(Pageable pageable) {
-		PageRequest internalPageable = PageRequest.of(
-				pageable.getPageNumber(),
-				pageable.getPageSize(),
-				Sort.by(Sort.Direction.DESC, "score")
-						.and(Sort.by(Sort.Direction.ASC, "id")));
+		Page<UserRankingProjection> userPage = userDao.findAllUsersWithRank(pageable);
 
-		Page<User> userPage = userDao.findAll(internalPageable);
 		List<UserRankingDTO> dtoList = userPage.getContent().stream()
-				.map(UserRankingDTO::fromUser)
-				.collect(Collectors.toList());
+				.map(p -> new UserRankingDTO(p.getId(), p.getUserName(), p.getScore(), p.getPosition()))
+				.toList();
 
-		return new PageImpl<>(
-				dtoList,
-				PageRequest.of(userPage.getNumber() + 1, userPage.getSize(), userPage.getSort()),
-				userPage.getTotalElements()
-		);
+		return new PageImpl<>(dtoList, pageable, userPage.getTotalElements());
 	}
 
 	public Page<UserRankingDTO> getUsersOrderedByScoreFromUser(Long userId, Pageable pageable) {
 		this.retrieve(userId);
 		Integer userPosition = userDao.findUserRankPosition(userId);
-		if (userPosition == null) {
-			// Si no encontramos la posición, devolvemos la primera página
+		if (userPosition == null || userPosition <= 0) {
 			return getUsersOrderedByScoreDesc(PageRequest.of(0, pageable.getPageSize()));
 		}
-		int pageNumber = userPosition / pageable.getPageSize();
+
+		int zeroBasedPosition = userPosition - 1;
+		int pageNumber = zeroBasedPosition / pageable.getPageSize();
+
 		return getUsersOrderedByScoreDesc(PageRequest.of(pageNumber, pageable.getPageSize()));
 	}
 
 	public Racha getRachaUsuario(Long userId) {
 		User user = retrieve(userId);
 		return new Racha(user.getRachaActual(), user.getUltimaActividad());
+	}
+
+	private UserRankingDTO getUserRankPositionById(User user) {
+		Long userId = user.getId();
+		String userName = user.getUsername();
+		BigDecimal score = user.getScore();
+		int position = userDao.findUserRankPosition(user.getId());
+		return new UserRankingDTO(userId,userName,score,position);
 	}
 }
